Remix Fix kudos gap

--- a/remix-blog/app/styles/app.css
+++ b/remix-blog/app/styles/app.css
@@ -820,6 +820,11 @@ video {
        column-gap: 1rem;
 }
 
+.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+
 .overflow-scroll {
   overflow: scroll;
 }
@@ -951,6 +956,10 @@ video {
 
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-9 {
+  padding: 2.25rem;
 }
 
 .py-4 {
